modificación del index
Ya está el menu y el banner

--- a/Index.html
+++ b/Index.html
@@ -2,14 +2,33 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="estilo.css">
+	<title>CyberDeal</title>
+	<link rel="stylesheet" href="css/estilo.css">
+	<link href="https://file.myfontastic.com/aMxkVe4rrgjHNrbM5SwCn9/icons.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
-	<header>
-		
+	<header class="header">
+		<div class="contenedor">
+			<h1 class = "Logo">CyberDeal</h1>
+			<span class="icon-menu" id="btnMenu"></span>
+			<nav class="nave" id="navegacion">
+				<ul class="menu">
+					<li class="item-menu"><a class="link-menu" href="#">Inicio</a></li>
+					<li class="item-menu"><a class="link-menu" href="#">Acerca de</a></li>
+					<li class="item-menu"><a class="link-menu" href="#">Contactos</a></li>
+				</ul>
+			</nav>
+		</div>
 	</header>
 	
+	<div class="banner">
+    	<img src="img/img1.jpg" alt="" class="banner__img">
+    	<div class="contenedor">
+    		<h4 class="banner__titulo">Diseño Web</h4>
+    		<p class="banner__txt">La mejor forma de atraer a tus clientes</p>
+    	</div>
+    </div>
+<script type="text/javascript" src="js/menu.js"></script>	
 </body>
 </html>
