--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
 	</header>
 	
 	<div class="banner">
-    	<img src="img/img1.jpg" alt="" class="banner__img">
+    	<img src="img/banner/img1.jpg" alt="" class="banner__img">
     	<div class="contenedor">
     		<h4 class="banner__titulo">Diseño Web</h4>
     		<p class="banner__txt">La mejor forma de atraer a tus clientes</p>
