--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 <body>
 	<header class="header">
         <div class="contenedor">
-            <h1 class="logo">Web Design</h1>
+            <h1 class="logo">CyberDeal</h1>
             <span class="icon-menu" id="btnMenu"></span>
             <nav class="nav" id="navegacion">
                 
