Ya estan los "desarrolladores" en una sola fila
Ya el ultimo colaborador no queda al final

--- a/Index.html
+++ b/Index.html
@@ -73,9 +73,9 @@
                         <figure>
                             <img src="img/desarrolladores/chape.jpg" alt="" class="frontal">
                             <figcaption class="trasera">
-                                <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, maxime.</h2>
+                                <h2>Una manera más fácil de trabajar</h2>
                                 <hr>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo qui neque architecto! Inventore quaerat, blanditiis fugit accusantium doloribus omnis suscipit. Dolorem repudiandae et possimus nostrum tempora odit inventore est ad!</p>
+                                <p>Nuestro programa tiene una manera fácil y sencilla de poder hacer aquellos trabajos laborales escritos a mano, ahora puedes hacer mucho más y de una manera sencilla.</p>
                             </figcaption>
                         </figure>
                     </a>
@@ -86,9 +86,9 @@
                         <figure>
                             <img src="img/desarrolladores/chris.jpg" alt="" class="frontal">
                             <figcaption class="trasera">
-                                <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, maxime.</h2>
+                                <h2>Una manera más fácil de trabajar</h2>
                                 <hr>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo qui neque architecto! Inventore quaerat, blanditiis fugit accusantium doloribus omnis suscipit. Dolorem repudiandae et possimus nostrum tempora odit inventore est ad!</p>
+                                <p>Nuestro programa tiene una manera fácil y sencilla de poder hacer aquellos trabajos laborales escritos a mano, ahora puedes hacer mucho más y de una manera sencilla.</p>
                             </figcaption>
                         </figure>
                     </a>
@@ -98,9 +98,9 @@
                         <figure>
                             <img src="img/desarrolladores/Carlos.jpg" alt="" class="frontal">
                             <figcaption class="trasera">
-                                <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, maxime.</h2>
+                                <h2>Una manera más fácil de trabajar</h2>
                                 <hr>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo qui neque architecto! Inventore quaerat, blanditiis fugit accusantium doloribus omnis suscipit. Dolorem repudiandae et possimus nostrum tempora odit inventore est ad!</p>
+                                <p>Nuestro programa tiene una manera fácil y sencilla de poder hacer aquellos trabajos laborales escritos a mano, ahora puedes hacer mucho más y de una manera sencilla.</p>
                             </figcaption>
                         </figure>
                     </a>
