--- a/Index.html
+++ b/Index.html
@@ -60,7 +60,7 @@
                         <figure>
                             <img src="img/desarrolladores/alex.jpg" alt="" class="frontal">
                             <figcaption class="trasera">
-                                <h2>Una manera más fácil de trabajar</h2>
+                                <h2>Alexander Valladares</h2>
                                 <hr>
                                 <p>Nuestro programa tiene una manera fácil y sencilla de poder hacer aquellos trabajos laborales escritos a mano, ahora puedes hacer mucho más y de una manera sencilla.</p>
                             </figcaption>
@@ -73,7 +73,7 @@
                         <figure>
                             <img src="img/desarrolladores/chape.jpg" alt="" class="frontal">
                             <figcaption class="trasera">
-                                <h2>Una manera más fácil de trabajar</h2>
+                                <h2>Andrés Chapetón</h2>
                                 <hr>
                                 <p>Nuestro programa tiene una manera fácil y sencilla de poder hacer aquellos trabajos laborales escritos a mano, ahora puedes hacer mucho más y de una manera sencilla.</p>
                             </figcaption>
@@ -86,7 +86,7 @@
                         <figure>
                             <img src="img/desarrolladores/chris.jpg" alt="" class="frontal">
                             <figcaption class="trasera">
-                                <h2>Una manera más fácil de trabajar</h2>
+                                <h2>Christopher Salgador</h2>
                                 <hr>
                                 <p>Nuestro programa tiene una manera fácil y sencilla de poder hacer aquellos trabajos laborales escritos a mano, ahora puedes hacer mucho más y de una manera sencilla.</p>
                             </figcaption>
@@ -98,7 +98,7 @@
                         <figure>
                             <img src="img/desarrolladores/Carlos.jpg" alt="" class="frontal">
                             <figcaption class="trasera">
-                                <h2>Una manera más fácil de trabajar</h2>
+                                <h2>Carlos Avaloz</h2>
                                 <hr>
                                 <p>Nuestro programa tiene una manera fácil y sencilla de poder hacer aquellos trabajos laborales escritos a mano, ahora puedes hacer mucho más y de una manera sencilla.</p>
                             </figcaption>
