Footer ya está listo
El footer ya está y listo

--- a/Index.html
+++ b/Index.html
@@ -18,8 +18,7 @@
                     <li class="menu__item"><a class ="menu__link select" href="#">Inicio</a></li>
                     <li class="menu__item"><a class ="menu__link" href="#">Acerca de</a></li>
                     <li class="menu__item"><a class ="menu__link" href="#">Nosotros</a></li>
-                </ul>
-                
+				</ul>
             </nav>
         </div>
     </header>
@@ -106,6 +105,14 @@
                     </a>
                 </div>
             </div>
+    <footer class="footer">
+    	<div class="social">
+    		<a href="" class="icon-facebook"></a>
+    		<a href="" class="icon-instagram"></a>
+			<a href="" class="icon-google-plus"></a>
+    	</div>
+    	<p class="copy">CyberDeal 2017 - Todos los derechos reservados </p>
+    </footer>
     
 <script type="text/javascript" src="js/menu.js"></script>	
 </body>
