--- a/Index.html
+++ b/Index.html
@@ -37,15 +37,15 @@
                <img src="Logo/Logo.png">
            </div> 
            <div class="contenedor_acerca">
-               <article>
+               <article class="articulo">
                    <h2>Misión</h2>
                    <p>Texto de ejemplo para misión</p>
                </article>
-               <article>
+               <article class="articulo">
                    <h2>Visión</h2>
                    <p>Texto de emeplo para visión</p>
                </article>
-               <article>
+               <article class="articulo">
                    <h2>¿Qué es CyberDeal?</h2>
                    <p>Descripción de CyberDeal</p>
                </article>
