--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
 	<title>CyberDeal</title>
 	<link rel="stylesheet" href="css/estilo.css">
 	<link href="https://file.myfontastic.com/aMxkVe4rrgjHNrbM5SwCn9/icons.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/animate.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
@@ -26,8 +27,8 @@
 	<div class="banner">
     	<img src="img/banner/img1.jpg" alt="" class="banner__img">
     	<div class="contenedor">
-    		<h2 class="banner__titulo">La mejor educación a tu alcance</h2>
-    		<p class="banner__txt">estudia con nosotros y alcanza tus sueños</p>
+    		<h2 class="banner__titulo animated fadeInDown">La mejor educación a tu alcance</h2>
+    		<p class="banner__txt animated fadeInDown">estudia con nosotros y alcanza tus sueños</p>
     	</div>
     </div>
     
@@ -54,7 +55,7 @@
     </div>
     
     <div class="contenido">
-                <div class="contenedor_tarjeta">
+                <div class="contenedor_tarjeta animated fadeInDown">
                     <a href="#">
                         <figure>
                             <img src="img/desarrolladores/alex.jpg" alt="" class="frontal">
