--- a/Index.html
+++ b/Index.html
@@ -27,8 +27,8 @@
 	<div class="banner">
     	<img src="img/banner/img1.jpg" alt="" class="banner__img">
     	<div class="contenedor">
-    		<h2 class="banner__titulo animated fadeInDown">La mejor educación a tu alcance</h2>
-    		<p class="banner__txt animated fadeInDown">estudia con nosotros y alcanza tus sueños</p>
+    		<h2 class="banner__titulo animated fadeInDown">Haz tu mejor opción</h2>
+    		<p class="banner__txt animated fadeInDown">Para tener el mejor sitio Web para tu empresa o marca personal</p>
     	</div>
     </div>
     
