--- a/Index.html
+++ b/Index.html
@@ -105,6 +105,13 @@
                     </a>
                 </div>
             </div>
+            <div class="redes">
+               <ul>
+                   <li><a href="#" target="_blank" class="icon-facebook"></a></li>
+                   <li><a href="#" target="_blank" class="icon-instagram"</li>
+                   <li><a href="#" target="_blank" class="icon-google-plus"></a></li>
+               </ul>
+            </div>
     <footer class="footer">
     	<div class="social">
     		<a href="" class="icon-facebook"></a>
