--- a/Index.html
+++ b/Index.html
@@ -68,7 +68,7 @@
                     </a>
                 </div>
                 
-                <div class="contenedor_tarjeta animated infinite pulse">
+                <div class="contenedor_tarjeta animated infinite pulse" id="tarjeta">
                     <a href="#">
                         <figure>
                             <img src="img/desarrolladores/chape.jpg" alt="" class="frontal">
@@ -109,7 +109,7 @@
             <div class="redes">
                <ul>
                    <li><a href="#" target="_blank" class="icon-facebook"></a></li>
-                   <li><a href="#" target="_blank" class="icon-instagram"</li>
+                   <li><a href="#" target="_blank" class="icon-instagram"></a>
                    <li><a href="#" target="_blank" class="icon-google-plus"></a></li>
                </ul>
             </div>
@@ -121,7 +121,9 @@
     	</div>
     	<p class="copy">CyberDeal 2017 - Todos los derechos reservados </p>
     </footer>
-    
+ 	
+<script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/menu.js"></script>	
+<script type="text/javascript" src="js/scroll.js"></script>	
 </body>
 </html>
