--- a/Index.html
+++ b/Index.html
@@ -68,7 +68,7 @@
                     </a>
                 </div>
                 
-                <div class="contenedor_tarjeta animated infinite pulse" id="tarjeta">
+                <div class="contenedor_tarjeta animated pulse" id="tarjeta">
                     <a href="#">
                         <figure>
                             <img src="img/desarrolladores/chape.jpg" alt="" class="frontal">
