--- a/Index.html
+++ b/Index.html
@@ -16,9 +16,9 @@
             <nav class="nav" id="navegacion">
                 
                 <ul class="menu">
-                    <li class="menu__item"><a class ="menu__link select" href="#">Inicio</a></li>
-                    <li class="menu__item"><a class ="menu__link" href="#">Acerca de</a></li>
-                    <li class="menu__item"><a class ="menu__link" href="#">Nosotros</a></li>
+                    <li class="menu__item"><a class ="menu__link select" href="#" id = "inicio">Inicio</a></li>
+                    <li class="menu__item"><a class ="menu__link" href="#" id="acerca">Acerca de</a></li>
+                    <li class="menu__item"><a class ="menu__link" href="#" id="nosotros">Nosotros</a></li>
 				</ul>
             </nav>
         </div>
@@ -54,7 +54,7 @@
        </div>
     </div>
     
-    <div class="contenido">
+    <div class="contenido" id="tarjetas">
                 <div class="contenedor_tarjeta animated infinite pulse">
                     <a href="#">
                         <figure>
