Pagina casi finalizada, solo falta agregar información

--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>CyberDeal</title>
+	<title>CyberDev.</title>
 	<link rel="stylesheet" href="css/estilo.css">
 	<link href="https://file.myfontastic.com/aMxkVe4rrgjHNrbM5SwCn9/icons.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/animate.css">
@@ -11,7 +11,7 @@
 <body>
 	<header class="header">
         <div class="contenedor">
-            <h1 class="logo">CyberDeal</h1>
+            <h1 class="logo">CyberDev.</h1>
             <span class="icon-menu" id="btnMenu"></span>
             <nav class="nav" id="navegacion">
                 
@@ -25,9 +25,9 @@
     </header>
 	
 	<div class="banner">
-    	<img src="img/banner/img1.jpg" alt="" class="banner__img">
+    	<img src="img/banner/img2.jpg" alt="" class="banner__img">
     	<div class="contenedor">
-    		<h2 class="banner__titulo animated fadeInDown">Haz tu mejor opción</h2>
+    		<h1 class="banner__titulo animated fadeInDown">Haz tu mejor opción</h1>
     		<p class="banner__txt animated fadeInDown">Para tener el mejor sitio Web para tu empresa o marca personal</p>
     	</div>
     </div>
@@ -122,7 +122,7 @@
     		<a href="" class="icon-instagram"></a>
 			<a href="" class="icon-google-plus"></a>
     	</div>
-    	<p class="copy">CyberDeal 2017 - Todos los derechos reservados </p>
+    	<p class="copy">CyberDev 2017 - Todos los derechos reservados </p>
     </footer>
  	
 <script type="text/javascript" src="js/jquery.js"></script>
